# uvcopier

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  copier.yml  mkdocs.yml  pyproject.toml  render_README_template.py  render_template.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md
docs/: .pages  automated_tasks.md  build_release_docs.md  console_script_setup.md  contributing.md  faq.md  history.md  prompts.md  pypi_release_checklist.md  troubleshooting.md  tutorial.md  write_docs.md
template/: .gitattributes.jinja  .gitignore.jinja  CONTRIBUTING.md.jinja  HISTORY.md.jinja  README.md.jinja  pyproject.toml.jinja  tasks.py.jinja  tox.ini.jinja  {% if create_author_file %}AUTHORS.md{% endif %}.jinja  {% if is_open_source %}LICENSE{% endif %}.jinja  {% if uses_docs %}mkdocs.yml{% endif %}.jinja  {% if uses_hook_tool %}.pre-commit-config.yaml{% endif %}.jinja  {% if uses_readthedocs %}.readthedocs.yaml{% endif %}.jinja  {{_copier_conf.answers_file}}.jinja
template/.github/: ISSUE_TEMPLATE.md.jinja  dependabot.yml.jinja  release-drafter.yml.jinja
template/.github/workflows/: python-publish.yml.jinja  release-drafter.yml.jinja  test-push-pr.yml.jinja  update-pre-commit.yml.jinja
template/src/{{package_import_name}}/: __init__.py.jinja  {% if has_cli %}cli.py{% endif %}.jinja  {{package_import_name}}.py.jinja
template/tests/: __init__.py.jinja  test_{{package_import_name}}.py.jinja
template/{% if uses_docs %}docs{% endif %}/: .pages.jinja  contributing.md.jinja  faq.md.jinja  history.md.jinja  index.md.jinja  installation.md.jinja  modules.md.jinja  troubleshooting.md.jinja  usage.md.jinja  {% if create_author_file %}authors.md{% endif %}.jinja
template/{% if uses_docs %}docs{% endif %}/advanced/: .pages.jinja
template/{% if uses_docs %}docs{% endif %}/api/: .pages.jinja  modules.md.jinja
template/{% if uses_docs %}docs{% endif %}/community/: .pages.jinja  contributing.md.jinja  faq.md.jinja  history.md.jinja  {% if create_author_file %}authors.md{% endif %}.jinja
template/{% if uses_docs %}docs{% endif %}/concepts/: .pages.jinja
template/{% if uses_docs %}docs{% endif %}/examples/: .pages.jinja
tests/: conftest.py  test_edge_cases.py  test_template.py
(+6 files in other folders)
